tdf#151478 sw: fix row/column selection at nested table

Table->Select->Row (.uno:EntireRow) and
Table->Select->Column (.uno:EntireColumn) didn't
work, when the last cell of the row or column starts
with a nested table.

Change-Id: I31e2fdebb226911921fb727f58c03101c01a07b6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141224
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>